# oh-my-multica-demo-webhook-inbox

./: .dockerignore  .gitignore  .omac-verification.yaml  AGENTS.md  Dockerfile  GOAL.md  LICENSE  README.md  README.zh-CN.md  compose.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
.multica/: verification.json
.omac/: config.yaml  webhook-inbox.acceptance.yaml  webhook-inbox.yaml
docs/assets/: oh-my-multica-webhook-inbox-demo.cast
src/: api.py  config.py  domain.py  errors.py  repository.py  service.py
tests/: acceptance.sh  test_api.py  test_config.py  test_domain.py  test_repository.py  test_service.py  verify_delivery.sh
